# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.323.2.22 2007-02-20 09:38:53 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.1.6 (????/??/??)
 - (2007/02/20) fixed bug #980 - Use of uninitialized value in
    Kernel/System/AuthSession/FS.pm
 - (2007/02/15) changed unlock time reset mechanism, added unlock time reset
    if a agent sends an external message to the customer (like escalation
    reset mechanism)
 - (2007/02/09) fixed bug in _XMLHashAddAutoIncrement() - function could not
    return keys greater than '9'.
 - (2007/02/02) fixed bug #1056 - UTF-8 mode of OTRS and German Umlaute within
    agent's name
 - (2007/02/02) fixed bug #1505 - UserSyncLDAPMap fails with LDAP.pm version
    1.26 and up
 - (2007/01/30) fixed ticket_watcher.user_id datatype, moved from BIGINT to
    INTEGER
 - (2007/01/30) fixed oracle driver for xml alter table actions
 - (2007/01/30) improved _CryptedWithKey() - private key detection of
    Kernel/System/Crypt/PGP.pm if more keys are used for crypted messages
 - (2007/01/26) fixed ArticleFreeText output in CustomerTicketZoom mask
 - (2007/01/26) fixed bug in agent- and customer-ticket print feature

2.1.5 (2007/01/25)
 - (2007/01/25) fixed ignored ticket responible in phone ticket
 - (2007/01/18) fixed DestinationTime() if calendar feature is used
 - (2007/01/17) fixed not working freetime fields
 - (2007/01/11) fixed not working time selection if time zone feature is used
 - (2007/01/08) fixed not working email notification tags in auto response,
    agent and customer email notifications
 - (2007/01/08) fixed case sensitive of customer user login and agent user
    login in Kernel/System/User.pm and Kernel/System/CustomerUser/DB.pm if
    oracle or postgresql is used